courses/430_programming-languages/assignment-5/tests/regression/error/hw4_error26.sml
val prog = PROGRAM {decls=[],func_decls=[],stmts=[ST_EXP {exp=EXP_ID "a"}]}
  : program
;
